Fixed alignment issues with the title bar

--- a/style/drives.css
+++ b/style/drives.css
@@ -1,12 +1,5 @@
-h1 {
-    margin: 0 0 20px;
-}
-
 body {
     background-color: #ffffff;
-    padding-top: 25px;
-    margin: 0;
-    padding: 0;
 }
 
 #add-drive-form {
